Added validation - 05 - 1 /06 - 2  failing